sass/_css-starter/global/_video-meta.scss
.video-meta {
	background: $black;
	padding: em(10px, 16px);
	@include clearfix;

	.page--player__featured & {
		@include bp-sm {
			padding: em(15px, 16px);
		}
	}	

	&__time-author-container {
		float: left;
		color: $white;
		font-size: em(12px, 16px);
		width: 60%;

		@include bp-sm {
			font-size: em(14px, 16px);
		}

		&__am-pm {
			display: none;

			.page--player__featured & {
				@include bp-sm {
					display: inline;
				}
			}
		}

		&__bar {
			color: darken($gray-medium, 25%);
		}

		&__author {
			margin-top: em(10px, 16px);
			@include overflow-ellipse;
		}
	}

	&__share-views-container {
		float: right;
		text-align: right;
	
		&__share-list {
			@include clearfix;
		}

		&__share-item {
			float: left;
			display: block;
			
			& + & {
				margin-left: em(16px, 16px);

				@include bp-md {
					margin-left: em(18px, 16px);
				}
			}
		}

		&__share-link {
			display: block;
		}

		&__share-twitter,
		&__share-google,
		&__share-facebook {
			display: block;
			height: em(16px, 16px);
			width: em(16px, 16px);
			@include links-svg;

			@include bp-md {
				height: em(18px, 16px);
				width: em(18px, 16px);
			} 
		}

		&__views {
			color: $white;
			font-size: em(12px, 16px);
			margin-top: em(10px, 16px);

			@include bp-sm {
				font-size: em(14px, 16px);
			}
		}
	}
}

